--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
       <div id="root"></div>
       <footer>
         <div class="links">
-          <a href="#/news">news</a>&emsp;
-          <a href="#/worldnews"> worldnews </a>&emsp;
-          <a href="#/funny">funny</a>&emsp;
-          <a href="#/science">science</a>&emsp;
+          <a href="#/news">news</a>&nbsp;
+          <a href="#/worldnews"> worldnews </a>&nbsp;
+          <a href="#/funny">funny</a>&nbsp;
+          <a href="#/science">science</a>&nbsp;
           <a href="#/pics">pics</a>
         </div>
         <div>amp-js / Reddit Client</div>
