--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,9 @@
         </span>
         <span id="refresh">refresh</span>
       </header>
-      <div id="root"></div>
+      <div id="root">
+        <!-- amp-js Content -->
+      </div>
       <footer>
         <div class="links">
           <a href="#/news">news</a>&nbsp;
@@ -23,7 +25,7 @@
           <a href="#/science">science</a>&nbsp;
           <a href="#/pics">pics</a>
         </div>
-        <div>amp-js / Reddit Client</div>
+        <a href="#/about">about</a>
       </footer>
     </main>
     <script src="./app.js" type="module"></script>
