--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,6 @@
         <a href="#/about">about</a>
       </footer>
     </main>
-    <script src="./app.js" type="module"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
