new UI using components

--- a/src/index.html
+++ b/src/index.html
@@ -3,31 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./global.css" />
-    <title>amp-js / Reddit Client</title>
+    <link rel="stylesheet" href="./style.scss" />
+    <title>amp-js Reddit Client</title>
   </head>
   <body>
-    <main>
-      <header>
-        <span id="home">
-          <i>&nbsp;&amp;&nbsp;</i>&nbsp;&nbsp;amp-js Reddit Client
-        </span>
-        <span id="refresh">refresh</span>
-      </header>
-      <div id="root">
-        <!-- amp-js Content -->
-      </div>
-      <footer>
-        <div class="links">
-          <a href="#/news">news</a>&nbsp;
-          <a href="#/worldnews"> worldnews </a>&nbsp;
-          <a href="#/funny">funny</a>&nbsp;
-          <a href="#/science">science</a>&nbsp;
-          <a href="#/pics">pics</a>
-        </div>
-        <a href="#/about">about</a>
-      </footer>
-    </main>
+    <amp-root></amp-root>
     <script src="./app.js"></script>
   </body>
 </html>
