--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +8,7 @@
       content="Front-end Reddit Client App built using Amp-js"
     />
     <link rel="stylesheet" href="./style.scss" />
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
     <title>amp-js Reddit Client</title>
   </head>
   <body>
